CDH: parse AA_KBC_PARAMS if set
If AA_KBC_PARAMS env is set, we parse it and set kbc.name and kbc.url
accordingly in the config object.

Signed-off-by: Magnus Kulke <magnuskulke@microsoft.com>

--- a/confidential-data-hub/hub/Cargo.toml
+++ b/confidential-data-hub/hub/Cargo.toml
@@ -53,4 +53,4 @@ sev = ["attestation_agent", "image/sev", "kms/sev", "dep:sev", "secret/sev"]
 # support eHSM stacks (KMS, ...)
 ehsm = ["image/ehsm", "secret/ehsm"]
 
-bin = ["anyhow", "clap", "config", "env_logger", "protobuf", "serde", "tokio/signal", "ttrpc", "ttrpc-codegen"]
+bin = ["anyhow", "attestation_agent", "clap", "config", "env_logger", "protobuf", "serde", "tokio/signal", "ttrpc", "ttrpc-codegen"]
