attester: implement runtime measurement for az tee
the trait fn's extend_runtime_measurement() have been implemented for
both az-snp-vtpm and az-tdx-vtpm. There is a bit of duplicate code, but
it's better than introducing deps across attesters

Signed-off-by: Magnus Kulke <magnuskulke@microsoft.com>

--- a/attestation-agent/attester/Cargo.toml
+++ b/attestation-agent/attester/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2021"
 [dependencies]
 anyhow.workspace = true
 async-trait.workspace = true
-az-snp-vtpm = { version = "0.5.3", default-features = false, features = ["attester"], optional = true }
-az-tdx-vtpm = { version = "0.5.3", default-features = false, features = ["attester"], optional = true }
+# az-snp-vtpm = { version = "0.5.3", default-features = false, features = ["attester"], optional = true }
+az-snp-vtpm = { git = "http://github.com/mkulke/azure-cvm-tooling", default-features = false, features = ["attester"], optional = true, rev = "fff44a" }
+# az-tdx-vtpm = { version = "0.5.3", default-features = false, features = ["attester"], optional = true }
+az-tdx-vtpm = { git = "http://github.com/mkulke/azure-cvm-tooling", default-features = false, features = ["attester"], optional = true, rev = "fff44a" }
 base64.workspace = true
 clap = { workspace = true, features = ["derive"], optional = true }
 kbs-types.workspace = true
